# nasde-toolkit

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/skills/benchmark-creator/: SKILL.md
.claude/skills/benchmark-from-history/: SKILL.md
.claude/skills/benchmark-from-public-repos/: SKILL.md
.claude/skills/benchmark-runner/: SKILL.md
.claude/skills/nasde-benchmark-calibration/: SKILL.md
.claude/skills/nasde-benchmark-creator/: SKILL.md
.claude/skills/nasde-benchmark-from-history/: SKILL.md
.claude/skills/nasde-benchmark-from-public-repos/: SKILL.md
.claude/skills/nasde-benchmark-runner/: SKILL.md
.claude/skills/nasde-benchmark-runner/scripts/: export_codex_oauth_token.ps1  export_gemini_oauth_token.ps1  export_oauth_token.ps1  export_oauth_token.sh  pareto.py
.claude/skills/nasde-dev/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: docs-deploy.yml  dogfooding.yml  example-validation.yml  publish.yml  quality-gate.yml
benchmarks/ddd-architectural-challenges/: assessment_dimensions.json  local-registry.json  sdlc-eval.toml
benchmarks/ddd-architectural-challenges/jobs/2026-03-16__09-56-31/: config.json
benchmarks/ddd-architectural-challenges/tasks/ddd-threshold-discount/: assessment_criteria.md  instruction.md  task.json  task.toml
benchmarks/ddd-architectural-challenges/variants/baseline/: CLAUDE.md  harbor_config.json
benchmarks/ddd-architectural-challenges/variants/guided/: CLAUDE.md
branding/: README.md
docs/: RELEASING.md  benchmark-results.md  ci-setup.md  use-cases.md  windows-issues-2026-05-09.md
docs/adr/: 001-open-host-service.md  002-all-deps-as-core.md  003-eval-on-by-default.md  004-pass-through-cli-delegation.md  005-repo-root-chdir.md  006-opik-deferred-metrics-patch.md  007-git-tag-versioning.md  008-independent-dimension-scales.md  009-plugin-and-skill-by-reference.md  010-git-platform-integration.md  011-token-cost-metrics.md  012-native-codex-gemini-skill-injection.md  013-layered-pricing-override.md
docs/superpowers/plans/: 2026-03-20-ci-github-actions.md  2026-03-23-nasde-dev-skill-benchmark.md  2026-04-16-subprocess-evaluator-backend.md  2026-04-16-trajectory-aware-evaluator.md  2026-04-22-dependency-modernization.md
docs/superpowers/specs/: 2026-03-20-nasde-dev-skill-benchmark-design.md  2026-04-16-trajectory-aware-evaluator-design.md  2026-04-22-dependency-modernization-design.md
examples/ddd-architectural-challenges/: .gitignore  CALIBRATION_TRIAL_2026-06-05.md  EXPERIMENT_LOG.md  EXPERIMENT_STATUS.md  POC-REPORT-TOOLING.md  SIGNIFICANCE-per-dimension-bayes-vs-bootstrap.md  SIGNIFICANCE-per-dimension-bootstrap.md  analyze_focus.py  assessment_dimensions.json  build_experiment_log.py  nasde.toml
examples/ddd-architectural-challenges/assets/: make_charts.py
examples/ddd-architectural-challenges/tasks/csharp-anemic-to-rich-domain/: assessment_criteria.md  instruction.md  task.json  task.toml
examples/ddd-architectural-challenges/tasks/csharp-movie-rental-anemic/: assessment_criteria.md  instruction.md  task.toml
examples/ddd-architectural-challenges/tasks/ddd-threshold-discount/: assessment_criteria.md  task.toml
examples/ddd-architectural-challenges/tasks/ddd-weather-discount/: assessment_criteria.md  instruction.md  task.json  task.toml
examples/ddd-architectural-challenges/tasks/java-order-dispatch-domain-entities/: assessment_criteria.md  instruction.md  task.json  task.toml
examples/ddd-architectural-challenges/variants/claude-ntcoding-tactical-ddd/: CLAUDE.md
examples/ddd-architectural-challenges/variants/claude-ntcoding-tactical-ddd-anemic-tuned/: variant.toml
examples/ddd-architectural-challenges/variants/claude-ntcoding-tactical-ddd-movie-tuned/: variant.toml
examples/ddd-architectural-challenges/variants/claude-ntcoding-tactical-ddd-weather-tuned/: variant.toml
examples/ddd-architectural-challenges/variants/claude-vanilla/: harbor_config.json
examples/ddd-architectural-challenges/variants/codex-guided/: AGENTS.md
examples/nasde-dev-skill/: .gitignore  assessment_dimensions.json  nasde.codex.toml  nasde.toml
examples/refactoring-skill/: assessment_dimensions.json  nasde.toml
scripts/: export_codex_oauth_token.sh  export_gemini_oauth_token.sh  export_oauth_token.sh  validate_example_task.sh  validate_gemini_auth.sh
src/nasde_toolkit/: __init__.py  banner.py  calibration_publisher.py  calibration_resolve.py  cli.py  config.py  docker.py  eval_migration.py  evaluator.py  plugin_registration.py  pricing.py  pricing.toml  pricing_report.py  results_exporter.py  runner.py  skills_installer.py  token_metrics.py  update_check.py
src/nasde_toolkit/agents/: __init__.py  configurable_claude.py  configurable_codex.py  configurable_gemini.py
src/nasde_toolkit/evaluator_backends/: __init__.py  claude_subprocess.py  codex_subprocess.py  protocol.py
src/nasde_toolkit/git_platform_backends/: __init__.py  detect.py  git_ops.py  github_cli.py  gitlab_cli.py  protocol.py
src/nasde_toolkit/scaffold/: __init__.py
src/sdlc_eval_kit/: __init__.py  cli.py  config.py  docker.py  evaluator.py  runner.py
src/sdlc_eval_kit/agents/: __init__.py  configurable_claude.py
src/sdlc_eval_kit/scaffold/: __init__.py
tests/: conftest.py  test_calibration_publisher.py  test_calibration_resolve.py  test_cli.py  test_config.py  test_config_plugin.py  test_configurable_codex.py  test_configurable_gemini.py  test_docker.py  test_docker_plugin.py  test_effort_resolution.py  test_eval_migration.py  test_evaluator.py  test_evaluator_backends.py  test_git_platform_backends.py  test_plugin_registration.py  test_pricing.py  test_pricing_report.py  test_results_exporter.py  test_runner.py  test_runner_economics.py  test_runner_skills.py  test_scaffold.py  test_skills_installer.py  test_token_metrics.py  test_update_check.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: HeaderNav.astro
website/src/styles/: custom.css
(+112 files in other folders)
