[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nasde-toolkit"
dynamic = ["version"]
description = "Noesis Agentic Software Development Evals Toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["evaluation", "agents", "llm", "coding-agents", "evals", "harbor", "opik"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.15",
    "rich>=14.1",
    "platformdirs>=4.0",
    "packaging>=25,<26",
    "harbor>=0.4,<0.5",
    "opik>=2,<3",
    # Transitive via harbor/opik. Pinned to fix GHSA-xqmj-j6mv-4862 (litellm <1.83.7).
    "litellm>=1.83.7",
]

[project.urls]
Homepage = "https://noesis.vision/nasde/"
Source = "https://github.com/NoesisVision/nasde-toolkit"
Issues = "https://github.com/NoesisVision/nasde-toolkit/issues"
Changelog = "https://github.com/NoesisVision/nasde-toolkit/blob/main/CHANGELOG.md"
Documentation = "https://github.com/NoesisVision/nasde-toolkit/tree/main/docs"

[project.scripts]
nasde = "nasde_toolkit.cli:app"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/nasde_toolkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nasde_toolkit"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills/nasde-benchmark-creator" = "nasde_toolkit/_bundled_skills/nasde-benchmark-creator"
".claude/skills/nasde-benchmark-from-history" = "nasde_toolkit/_bundled_skills/nasde-benchmark-from-history"
".claude/skills/nasde-benchmark-from-public-repos" = "nasde_toolkit/_bundled_skills/nasde-benchmark-from-public-repos"
".claude/skills/nasde-benchmark-runner" = "nasde_toolkit/_bundled_skills/nasde-benchmark-runner"

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["src/nasde_toolkit/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/nasde_toolkit/cli.py" = ["B008", "E402"]


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["src/nasde_toolkit/_version\\.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
